--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lucas</title>
+    <title>Akul</title>
 
     <link rel="stylesheet" href="css/styles.css">
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -33,7 +33,7 @@
 
         <header id="welcome-section">
             <div class="welcome-text">
-                <h1 id="header-text">Hey !<br>I'm Lucas</h1>
+                <h1 id="header-text">Hey !<br>I'm Akul</h1>
                 <h2 id="subheader">Programmer and Front-End Developer.</h2>
             </div>
         </header>
